--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "bootstrap": "^4.3.1",
     "cookie-parser": "~1.3.3",
     "cors": "^2.8.4",
     "debug": "^4.1.0",
